--- a/assets/CHANGELOG
+++ b/assets/CHANGELOG
@@ -2,6 +2,11 @@
 Birthday Manager - ChangeLog                          http://www.marcoduff.com/
 -------------------------------------------------------------------------------
 
+Changes to version code 1 - 1.2 (September 24, 2010):
+
+  - Lingua italiana;
+  - Notifiche per i compleanni.
+
 Changes to version code 1 - 1.1 (September 23, 2010):
 
   - Lista dei contatti che non hanno impostato un compleanno;
