--- a/assets/TODO
+++ b/assets/TODO
@@ -2,6 +2,6 @@
 Birthday Manager - ChangeLog                          http://www.marcoduff.com/
 -------------------------------------------------------------------------------
 
-- Notifiche per i compleanni.
+- Nulla!
 
 -------------------------------------------------------------------------------
