--- a/assets/CHANGELOG
+++ b/assets/CHANGELOG
@@ -2,6 +2,11 @@
 Birthday Manager - ChangeLog                          http://www.marcoduff.com/
 -------------------------------------------------------------------------------
 
+Changes to version code 1 - 1.3 (September 27, 2010):
+
+  - Avvio dell'applicazione al caricamento del terminale;
+  - Impostazioni di notifica.
+
 Changes to version code 1 - 1.2 (September 24, 2010):
 
   - Lingua italiana;
