--- a/assets/CHANGELOG
+++ b/assets/CHANGELOG
@@ -2,24 +2,28 @@
 Birthday Manager - ChangeLog                          http://www.marcoduff.com/
 -------------------------------------------------------------------------------
 
-Changes to version code 1 - 1.3 (September 27, 2010):
+v1.3.1 - 07/10/2010
+
+  - Bug fix (#1).
+
+v1.3 - 27/09/2010
 
   - Avvio dell'applicazione al caricamento del terminale;
   - Impostazioni di notifica.
 
-Changes to version code 1 - 1.2 (September 24, 2010):
+v1.2 - 24/09/2010
 
   - Lingua italiana;
   - Notifiche per i compleanni.
 
-Changes to version code 1 - 1.1 (September 23, 2010):
+v1.1 - 23/09/2010
 
   - Lista dei contatti che non hanno impostato un compleanno;
   - Migliorie grafiche;
   - Diminuito il min SDK alle API 7;
   - Bug fix.
 
-Changes to version code 1 - 1.0 (September 22, 2010):
+v1.0 - 22/09/2010
 
   - Primo rilascio.
 
