--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="todayNotification">Show Today Notification</string>
     <string name="app_name">Birthday Manager</string>
-    <string name="version">1.3</string>
 	<string name="today">Today</string>
 	<string name="tomorrow">Tomorrow</string>
 	<string name="inaweek">In a week (%1$s days left - %2$s)</string>
@@ -30,6 +29,6 @@
     <string name="menuDonate">Donate</string>
     <string name="menuAbout">About</string>
     <string name="close">Close</string>
-	<string name="aboutMsg">Birthday Manager\nVersion %1$s\nby Marco Palermo\nandroid.marcoduff.com</string>
+	<string name="aboutMsg">Birthday Manager\nVersion %1$s\nLicense: GPLv3\nby Marco Palermo\nandroid.marcoduff.com</string>
 	<string name="showSite">Show Site</string>
 </resources>
